[gd_scene load_steps=13 format=2]

[ext_resource path="res://title_screen/title/title_scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=2]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://title_screen/tutorial/tutorial_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/settings/settings_scene.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/credits/credits_scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/fader.tscn" type="PackedScene" id=7]
[ext_resource path="res://game_screen/calendar.gd" type="Script" id=8]
[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=9]
[ext_resource path="res://assets/sound/title_soundtrack.ogg" type="AudioStream" id=10]
[ext_resource path="res://ui/font_small.tres" type="DynamicFont" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 32, 16, 16 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Top" type="NinePatchRect" parent="."]
margin_right = 640.0
margin_bottom = 32.0
texture = SubResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Bottom" type="NinePatchRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -42.0
margin_right = 640.0
texture = SubResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -41.0

[node name="Calendar" type="Control" parent="Background"]
margin_right = 640.0
margin_bottom = 286.0
script = ExtResource( 8 )
lane_width = 128.0
lane_delimeter_color = Color( 0.341176, 0.447059, 0.466667, 1 )
slot_delimeter_color = Color( 0.309804, 0.560784, 0.729412, 1 )
slot_alt_delimeter_color = Color( 0.780392, 0.811765, 0.8, 1 )
background_color = Color( 0.921569, 0.929412, 0.913725, 1 )
reserve_background_color = Color( 0.6, 0.6, 0.6, 1 )

[node name="Monday" type="Label" parent="Background/Calendar"]
margin_left = 8.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_monday"

[node name="Tuesday" type="Label" parent="Background/Calendar"]
margin_left = 136.0
margin_top = 1.0
margin_right = 190.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_tuesday"

[node name="Wednesday" type="Label" parent="Background/Calendar"]
margin_left = 264.0
margin_top = 1.0
margin_right = 324.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_wednesday"

[node name="Thursday" type="Label" parent="Background/Calendar"]
margin_left = 392.0
margin_top = 1.0
margin_right = 452.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_thursday"

[node name="Friday" type="Label" parent="Background/Calendar"]
margin_left = 520.0
margin_top = 1.0
margin_right = 580.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_friday"

[node name="Calendar2" type="Control" parent="Background"]
margin_left = 641.0
margin_right = 1281.0
margin_bottom = 286.0
script = ExtResource( 8 )
lane_width = 128.0
lane_delimeter_color = Color( 0.341176, 0.447059, 0.466667, 1 )
slot_delimeter_color = Color( 0.309804, 0.560784, 0.729412, 1 )
slot_alt_delimeter_color = Color( 0.780392, 0.811765, 0.8, 1 )
background_color = Color( 0.921569, 0.929412, 0.913725, 1 )
reserve_background_color = Color( 0.6, 0.6, 0.6, 1 )

[node name="Monday" type="Label" parent="Background/Calendar2"]
margin_left = 8.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_monday"

[node name="Tuesday" type="Label" parent="Background/Calendar2"]
margin_left = 136.0
margin_top = 1.0
margin_right = 190.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_tuesday"

[node name="Wednesday" type="Label" parent="Background/Calendar2"]
margin_left = 264.0
margin_top = 1.0
margin_right = 324.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_wednesday"

[node name="Thursday" type="Label" parent="Background/Calendar2"]
margin_left = 392.0
margin_top = 1.0
margin_right = 452.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_thursday"

[node name="Friday" type="Label" parent="Background/Calendar2"]
margin_left = 520.0
margin_top = 1.0
margin_right = 580.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "ui_friday"

[node name="TitleScene" parent="." instance=ExtResource( 1 )]

[node name="NewGameButton" parent="TitleScene" index="1"]
margin_bottom = 140.0

[node name="SettingsButton" parent="TitleScene" index="2"]
margin_top = 144.0
margin_bottom = 184.0

[node name="CreditsButton" parent="TitleScene" index="3"]
margin_top = 188.0
margin_bottom = 228.0

[node name="QuitButton" parent="TitleScene" index="4"]
margin_top = 232.0
margin_bottom = 272.0

[node name="CreditsScene" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CreditsText" parent="CreditsScene/CreditsContainer" index="0"]
text = "[center]Thank you for playing[/center]"

[node name="SettingsScene" parent="." instance=ExtResource( 5 )]
visible = false

[node name="TutorialScene" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Fader" parent="." instance=ExtResource( 7 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="TitleScene/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="TitleScene/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="TitleScene/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="TitleScene/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsScene/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
[connection signal="pressed" from="SettingsScene/VBoxContainer/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]
[connection signal="pressed" from="TutorialScene/BackToTitleButton" to="." method="_on_BackToTitleButton_pressed"]

[editable path="TitleScene"]
[editable path="CreditsScene"]
[editable path="SettingsScene"]
[editable path="TutorialScene"]
